--- a/FIPLY/Dokumente/FIPLY Latex/denkmayr_Donations.tex
+++ b/FIPLY/Dokumente/FIPLY Latex/denkmayr_Donations.tex
@@ -7,7 +7,7 @@
 \subsection{Donations}
 Donations stellen eine Möglichkeit für Benutzer dar den Entwicklern einer App Geld zu spenden, um Ihren Dank auszudrücken oder die Entwicklung der App zu unterstützen.
 Es gibt viele Möglichkeiten um die Implementierung von Donations zu unterstützen.\newline
-Zu den populärsten Formen zählen Dienste wie PayPal, Flattr, das Implementieren von In-App-Käufen die keinen Gegenwert liefern oder das erstellen einer kostenpflichtigen App die keine Funktionen beinhaltet und den selben Namen wie die Gratis App und einen Suffix wie z.B.: Donation trägt.
+Zu den populärsten Formen zählen Dienste wie PayPal, Flattr, das Implementieren von In-App-Käufen die keinen Gegenwert liefern oder das Erstellen einer kostenpflichtigen App die keine Funktionen beinhaltet und denselben Namen wie die Gratis App und einen Suffix wie z.B.: Donation trägt.
 
 
 \subsubsection{Flattr}
@@ -38,11 +38,11 @@ One time-payments, including peer-to-peer payments, online auctions, and donatio
 
 \ \\
 \subsubsection{Donations über In-App-Käufe}
-Nach diesem Modell werden In-App-Käufe zur Verfügung gestellt, die dem Benutzer die Möglichkeit geben Geld zu bezahlen, ohne einen Gegenwert zu erhalten.
+Nach diesem Modell werden In-App-Käufe zur Verfügung gestellt, die dem Benutzer die Möglichkeit geben Geld zu bezahlen, ohne einen Gegenwert zu erhalten. 
 Die In-App-Käufe werden im Kapitel Freemium näher beschrieben.
 \ \\
 \subsubsection{Zweite kostenpflichtige App}
-Es besteht die Möglichkeit eine zweite App zu erstellen die selbst keine Funktionen beinhaltet und den selben Namen wie die Gratis App + einen Suffix wie z.B.: (Donation) trägt.
+Es besteht die Möglichkeit eine zweite App zu erstellen die selbst keine Funktionen beinhaltet und denselben Namen wie die Gratis App + einen Suffix wie z.B.: (Donation) trägt.
 In diesem Falle kann ein zufriedener Benutzer diese zweite App kaufen und so den Entwickler der Gratis App unterstützen.
 
 \end{document}
