--- a/FIPLY/Dokumente/FIPLY Latex/denkmayr_Fragments.tex
+++ b/FIPLY/Dokumente/FIPLY Latex/denkmayr_Fragments.tex
@@ -13,7 +13,7 @@ Bei der Implementierung von Fragments wurde die Dokumentation zu diesen [\citeti
 
 \begin{figure}[h]
 \includegraphics[scale=0.60]{img/fragments_modules}
-\caption{Beispiel man kann mithilfe von Fragments Views erstellen, die sowohl auf einem Tablet als auch auf einem Handy ein optimales Benutzerinterface anbieten. [\citetitle{adFragmentsGuide} \cite{adFragmentsGuide}]}
+\caption{Zum Beispiel kann man mithilfe von Fragments Views erstellen, die sowohl auf einem Tablet als auch auf einem Handy ein optimales Benutzerinterface anbieten. [\citetitle{adFragmentsGuide} \cite{adFragmentsGuide}]}
 \end{figure}
 
 \newpage
@@ -53,7 +53,7 @@ Hier wird ein ExampleFragment erstellt, man ersetzt das Fragment das sich aktuel
 In dieser Arbeit werden Fragments verwendet, um die Benutzeransichten, ausgenommen des NavigationDrawers, anzuzeigen.
 Dabei wird ein FrameLayout im Layoutfile der MainActivity durch ein Fragment mittels der displayView() Methode ersetzt.
 Navigation durch diese Fragments wird mittels den Buttons im FMain oder dem NavigationDrawer ermöglicht.
-Zusätzlich werden verschachtelte Fragments verwendet um komplexere Ansichten darzustellen. In diesem Fall wird in den layout XML files der Fragments ein FrameLayout erstellte und die verschachtelten Fragments werden dann in diesen neuen FrameLayouts angezeigt.
+Zusätzlich werden verschachtelte Fragments verwendet um komplexere Ansichten darzustellen. In diesem Fall werden in den layout XML files der Fragments ein oder mehrere FrameLayouts erstellt und die verschachtelten Fragments werden dann in diesen neuen FrameLayouts angezeigt.
 \ \\
 \begin{lstlisting}
 private void displayView(Fragment fragment) {
