--- a/FIPLY/Dokumente/FIPLY Latex/denkmayr_Freemium.tex
+++ b/FIPLY/Dokumente/FIPLY Latex/denkmayr_Freemium.tex
@@ -5,11 +5,11 @@
 
 \begin{document}
 \subsection{Freemium}
-Freemium ist ein Konzept, das das verdienen von Geld über In-App-Käufe als primäre Einkommensquelle vorsieht.
+Beim Nachforschen und beim Implementieren von Freemium wurden diese Quellen verwendet: [\citetitle{yFreemium} \cite{yFreemium}], [\citetitle{adAdministerBilling} \cite{adAdministerBilling}]. \newline
+Freemium ist ein Konzept, das das Verdienen von Geld über In-App-Käufe als primäre Einkommensquelle vorsieht.
 Diese In-App-Käufe erfolgen über den Google Play Store. \newline
 Dazu werden In-App-Products auf der Google Play Store Website angelegt.
 Diesen Items wird eine Id, ein Name, ein Preis und einer von 3 Itemtypen zugeteilt. 
-\cite{yFreemium} \citetitle{yFreemium}
 
 \subsubsection{Consumable Items}
 Consumable Items sind Artikel die benutzt werden können und nachgekauft werden können. 
@@ -19,7 +19,7 @@ Eine Tankfüllung kann nur ein einziges Mal und nur auf einem Gerät verwendet w
 \subsubsection{Non-Consumable Items} 
 Non-Consumable Items sind Artikel die einmal gekauft werden und dem Benutzer erhalten bleiben.
 Ein Beispiel für ein Non-Consumable Item ist zum Beispiel eine Upgrade für ein Auto in einem Spiel.
-Dieses Upgrade bleibt erhalten und ist auch auf anderen Geräten verfügbar solange man mit dem selben Google Play Account eingeloggt ist. 
+Dieses Upgrade bleibt erhalten und ist auch auf anderen Geräten verfügbar solange man mit demselben Google Play Account eingeloggt ist. 
 
 \subsubsection{Subscriptions}
 Bei Subscriptions wird regelmäßig eine Gebühr entrichtet.
