--- a/FIPLY/Dokumente/FIPLY Latex/denkmayr_Music-Player.tex
+++ b/FIPLY/Dokumente/FIPLY Latex/denkmayr_Music-Player.tex
@@ -5,7 +5,7 @@
 
 \begin{document}
 \section{Musik}
-Beim erstellen des MediaPlayers wurden diese Quellen verwendet: [\citetitle{adMediaPlayer} \cite{adMediaPlayer}], [\citetitle{bMediaPlayer} \cite{bMediaPlayer}]. % Quellen
+Beim Erstellen des MediaPlayers wurden diese Quellen verwendet: [\citetitle{adMediaPlayer} \cite{adMediaPlayer}], [\citetitle{bMediaPlayer} \cite{bMediaPlayer}]. % Quellen
 \subsection{Lokalisierung der Musikdateien}
 \texttt{Am Beginn der Arbeit wurde der Music-Ordner nach mp3-Files durchsucht.}  
 \begin{lstlisting}
