Updated base file with status of our docs

--- a/FIPLY/Dokumente/FIPLY Latex/FIPLY_base.tex
+++ b/FIPLY/Dokumente/FIPLY Latex/FIPLY_base.tex
@@ -10,45 +10,45 @@
 \tableofcontents
 
 \newpage
-\subfile{bersenkowitsch_guiessay} % not yet approved
+\subfile{bersenkowitsch_guiessay} %%%% not yet approved
 
 \newpage
-\subfile{denkmayr_Fragments} % not yet approved
+\subfile{denkmayr_Fragments} % wird kontrolliert
 
 \newpage
-\subfile{bersenkowitsch_Databinding} % not yet approved
+\subfile{bersenkowitsch_Databinding} % wird kontrolliert
 
 \newpage
-\subfile{denkmayr_Bundles} % not yet approved
+\subfile{denkmayr_Bundles} %%%% not yet approved
 
 \newpage
-\subfile{denkmayr_Permissions} % not yet approved
+\subfile{denkmayr_Permissions} %%%% not yet approved
 
 \newpage
-\subfile{denkmayr_Music-Player} % not yet approved
+\subfile{denkmayr_Music-Player} % wird kontrolliert
 
 \newpage
-\subfile{denkmayr_NavigationDrawer} % not yet approved
+\subfile{denkmayr_NavigationDrawer} %%%% not yet approved
 
 \newpage
 \section{Commercialization}
-\subfile{denkmayr_Donations} % not yet approved
+\subfile{denkmayr_Donations} % wird kontrolliert
 \newpage
-\subfile{denkmayr_Freemium} % not yet approved
+\subfile{denkmayr_Freemium} %%%% not yet approved
 \newpage
-\subfile{denkmayr_Advertising} % not yet approved
+\subfile{denkmayr_Advertising} % wird kontrolliert
 \newpage
-\subfile{irsiegler_PaidVersion} % not yet approved
+\subfile{irsiegler_PaidVersion} %%%% not yet approved
 \newpage
-\subfile{irsiegler_FreePremium} % not yet approved
+\subfile{irsiegler_FreePremium} %%%% not yet approved
 \newpage
-\subfile{irsiegler_SellApp} % not yet approved
+\subfile{irsiegler_SellApp} %%%% not yet approved
 \newpage
-\subfile{bersenkowitsch_Promotions} % not yet approved
+\subfile{bersenkowitsch_Promotions} % wird kontrolliert
 
 \newpage
 \section{Der Trainingsplan}
-\subfile{bersenkowitsch_Trainingsplan} % not yet approved
+\subfile{bersenkowitsch_Trainingsplan} % wird kontrolliert
 
 \newpage
 \printbibliography
