--- a/FIPLY/Dokumente/FIPLY Latex/denkmayr_Permissions.tex
+++ b/FIPLY/Dokumente/FIPLY Latex/denkmayr_Permissions.tex
@@ -5,6 +5,7 @@
 
 \begin{document}
 \section{Permissions}
-TODO
+Beim Nachforschen und bei der Implementierung wurden diese Quellen verwendet: [\citetitle{} \cite{}]. 
+
 
 \end{document}
