--- a/FIPLY/Dokumente/FIPLY Latex/fiplystyle.sty
+++ b/FIPLY/Dokumente/FIPLY Latex/fiplystyle.sty
@@ -37,4 +37,13 @@
     showtabs=false,                  
     tabsize=2
 }
+\lstset{literate=%
+  {Ö}{{\"O}}1
+  {Ä}{{\"A}}1
+  {Ü}{{\"U}}1
+  {ß}{{\ss}}2
+  {ü}{{\"u}}1
+  {ä}{{\"a}}1
+  {ö}{{\"o}}1
+}
 \lstset{style=mystyle}
