--- a/FIPLY/Dokumente/FIPLY Latex/literatur.bib
+++ b/FIPLY/Dokumente/FIPLY Latex/literatur.bib
@@ -28,6 +28,13 @@
   url =   {http://developer.android.com/guide/components/fragments.html}
 }
 
+@Misc{adGPermissions,
+  title = {System Permissions},
+  month = mar,
+  year =  {2016},
+  url =   {http://developer.android.com/guide/topics/security/permissions.html}
+}
+
 @Misc{adMain,
   title = {Android Developers},
   month = feb,
@@ -49,6 +56,13 @@
   url =   {http://developer.android.com/training/implementing-navigation/nav-drawer.html}
 }
 
+@Misc{adTPermissions,
+  title = {Requesting Permissions at Run Time},
+  month = mar,
+  year =  {2016},
+  url =   {http://developer.android.com/training/permissions/requesting.html}
+}
+
 @Misc{bMediaPlayer,
   author = {{Ravi Tamada}},
   title =  {Android Building Audio Player Tutorial},
@@ -63,6 +77,13 @@
   month =  feb,
   year =   {2016},
   url =    {http://blog.teamtreehouse.com/add-navigation-drawer-android}
+}
+
+@Misc{bPermissions,
+  title = {Everything every Android Developer must know about new Android's Runtime Permission},
+  month = mar,
+  year =  {2016},
+  url =   {http://inthecheesefactory.com/blog/things-you-need-to-know-about-android-m-permission-developer-edition/en}
 }
 
 @Misc{flattr,
