--- a/FIPLY/Dokumente/FIPLY Latex/denkmayr_Permissions.tex
+++ b/FIPLY/Dokumente/FIPLY Latex/denkmayr_Permissions.tex
@@ -11,10 +11,10 @@ Beim Nachforschen und bei der Implementierung wurden diese Quellen verwendet:
 [\citetitle{adGPermissions} \cite{adGPermissions}].
 
 \ \\
-Permissions legen fest auf welche Funktionen des Smartphones eine App Zugriff hat.
-Ziel dieses Systems ist es Apps nur so viel zu erlauben wie unbedingt nötig.
-In diesem Fall ist es einer bösartigen App nicht möglich erheblichen Schaden zu verursachen, ohne die entsprechenden Permissions zu haben.
-Da eine Applikation von vornherein keine Permissions besitzt müssen diese im Manifest deklariert werden.
+Permissions legen fest, auf welche Funktionen des Smartphones eine App Zugriff hat.
+Ziel dieses Systems ist es, Apps nur so viel zu erlauben, wie unbedingt nötig.
+Das bedeutet, dass es einer bösartigen App nicht möglich ist, erheblichen Schaden zu verursachen, ohne die entsprechenden Permissions zu haben.
+Da eine Applikation von vornherein keine Permissions besitzt, müssen diese im Manifest deklariert werden.
 Android unterstützt mehrere Levels von Permissions.
 \begin{itemize}
 \item \textbf{Normal Permissions} stellen kaum Gefahr für die Privatsphäre des Benutzers oder den Betrieb des Systems dar und werden automatisch erlaubt sobald sie im Manifest angefordert werden.
@@ -22,7 +22,7 @@ Android unterstützt mehrere Levels von Permissions.
 \item \textbf{Dangerous Permissions} hingegen können gefährlich für die Privatsphäre des Benutzers werden oder den Betrieb des Systems erheblich stören. 
 Deshalb müssen Dangerous Permissions nicht nur im Manifest angefordert werden, sondern auch explizit vom Benutzer bestätigt werden.
 
-\item \textbf{Special Permissions} sind die 3 und seltenste Art von Permissions. 
+\item \textbf{Special Permissions} sind die dritte und seltenste Art von Permissions. 
 Diese sind besonders heikel und müssen im Manifest deklariert und über einen Intent angefordert werden.
 Dieser Intent öffnet ein Fenster speziell zur Verwaltung dieser Permission. \newline
 Zu diesen Special Permissions gehören die WRITE\_SETTINGS Permission, die Änderungen der Systemeinstellungen ermöglicht, 
@@ -43,7 +43,7 @@ Alle Arten von Permissions müssen in das Manifest eingetragen werden.
 \newpage
 \subsection{bis Android 5.1 (API level 22)}
 Wenn auf dem Gerät Android 5.1 (API level 22) oder niedriger installiert ist, werden alle Dangerous und Special Permissions auf der Google Play Store Seite der App angezeigt 
-und müssen bestätigt werden um die App herunterladen zu können. 
+und müssen bestätigt werden, um die App herunterladen zu können. 
 Sollten durch ein Update mehr Permissions benötigt werden, müssen diese beim Update bestätigt werden. 
 Die einzige Möglichkeit Permissions zurückzunehmen bietet das Deinstallieren der App.
 
@@ -95,7 +95,7 @@ private void showMessageOKCancel(String message, DialogInterface
 		.show();
 }
 \end{lstlisting}
-Da die Permissions erst zur Laufzeit abgefragt werden ist es möglich nur manche von diesen zu bestätigen und so die Handlungsbereiche der App nach seinen eigenen Bedürfnissen zu bestimmen.
+Da die Permissions erst zur Laufzeit abgefragt werden, ist es möglich nur manche von diesen zu bestätigen und so die Handlungsbereiche der App nach seinen eigenen Bedürfnissen zu bestimmen.
 Zudem können Permissions jederzeit in den Systemeinstellungen des Geräts zurückgenommen werden.
 
 
