--- a/FIPLY/Dokumente/FIPLY Latex/irsiegler_FreePremium.tex
+++ b/FIPLY/Dokumente/FIPLY Latex/irsiegler_FreePremium.tex
@@ -23,4 +23,9 @@ Um alle Funktionen freizuschalten ist eine Gebühr zu zahlen.
 \item Es gibt im Google-Play-Store etwa vier mal mehr gratis Apps, als bezahlte Apps und somit ist es schwerer sich am Markt durchzusetzen.
 \end{itemize}
 
+\subsubsection{Implementierung}
+
+Android Studio bietet eine Möglichkeit eine bezahlte und eine gratis in einem Projekt zu entwickeln.
+ Dies macht es trivial dieses Konzept in die Realität umzusetzen.
+
 \end{document}
