--- a/FIPLY/Dokumente/FIPLY Latex/irsiegler_Statistic.tex
+++ b/FIPLY/Dokumente/FIPLY Latex/irsiegler_Statistic.tex
@@ -4,22 +4,31 @@
 \date{26. Februar 2016}
 
 \begin{document}
-\subsection{Statistic}
+\section{Statistic}
 
-\subsubsection{Beschreibung}
-Mithilfe der Statistik kann der Benutzer feststellen wie er sich in den letzten Tagen/Wochen/Monaten geschlagen hat.
-Die verschiedenen verfügbaren Statistiken sollen dem Benutzer einen umfangreichen Überblick geben.
+\subsection{Beschreibung}
+Die Statistik gibt dem Benutzer eine Übersicht zu seinem Training, in den letzen Tagen/Wochen/Monaten. 
+Es werden verschiedene Statistiken zur Verfügung gestellt, um so viel Informationen wie möglich darzustellen.
+Die Graphen können auf eine bestimmte Zeitdauer beschränkt werden.
 
 
-\subsubsection{Verfügbare Statistiken}
+\subsection{Verfügbare Statistiken}
 \begin{itemize}
 \item Verfassung des Users nach dem Training.
 \item Entwicklung seines gehobenen Gewichts (anfänglich mit 10kg später mit 20kg etc.)
 \item Wieviel Gewicht hat der User an einem Tag, in einer Woche/Monat bewegt.
 \end{itemize}
 
-\subsubsection{GraphView}
-Um die Statistiken in der App darzustellen wird GraphView verwendet, eine open source library für Android zum erstellen von Diagrammen.
+\subsection{Technische Implementierung}
+\subsubsection{Aufnahme und Speicherung der Werte}
+Die aufzunehmenden Werte werden während bzw. nach der Trainingssession aufgenommen und danach in ihr jeweiliges Repository abgespeichert.
+Die einzelnen Werte für die Statistik werden in unserer SQLite Datenbank in ihren jeweiligen Repositories gespeichert.
+Dabei ist jeder Eintrag eine Kombination aus dem Datum zur Zeit der Aufnahme und dem Wert welcher gespeichert werden soll.
+
+\subsubsection{Darstellung}
+Zur Darstellung der Statistiken wird GraphView verwendet. GraphView ist eine open-source library für Android zur Erstellung von Diagrammen.
+Verfügbar sind eine vielzahl von Diagramm-Arten wie z.B.: Linien-, Kuchen- und Punktdiagrammen.
+
 
 
 
